# -Intersect3D

./: CMakeLists.txt  ReadMe.md  start_test.sh
lib/: CMakeLists.txt  Exception.cpp  Exception.hpp  Intersect.cpp  Intersect.hpp  Segment3D.cpp  Segment3D.hpp  Vector3D.cpp  Vector3D.hpp
test/: CMakeLists.txt  TestIntersect1D.cpp  TestOneZeroSegment.cpp  TestParallelSegment.cpp  TestSegementOutPlan.cpp  TestSegmentOnPlane.cpp  TestTwoZeroSegment.cpp  test.cpp  test.h
